--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.23"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
